--- a/themes/cyabstyle/_config.yml
+++ b/themes/cyabstyle/_config.yml
@@ -1,14 +1,13 @@
 # Header
 menu:
-  Home: /
-  Archives: /archives
+  主页: /
+  关于我: /archives
 
 # Content
 excerpt_link: More
 prev: Prev
 next: Next
 reply: Reply
-share: Share
 fancybox: true
 
 # Sidebar
