--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: cyanstyle
+theme: cyabstyle
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
