--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://zcheng.site/
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title.html
 permalink_defaults:
 
 # Directory
@@ -25,7 +25,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: ['baidu_verify_rG8l25VsFs.html', 'google5273b2adcd968402.html', 'sitemap.xml']
 
 # Writing
 new_post_name: :title.md # File name of new posts
