--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: ['baidu_verify_rG8l25VsFs.html', 'google5273b2adcd968402.html', 'sitemap.xml']
+skip_render: ['baidu_verify_0ek0txJtPi.html', 'google5273b2adcd968402.html', 'sitemap.xml']
 
 # Writing
 new_post_name: :title.md # File name of new posts
