--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -4,7 +4,7 @@ avatar: /avatar/Dog.jpg
 # author name
 author: Orange
 # signature
-signature: witness me
+signature: Be yourself
 # SNS
 social:
   email: 1451426471@qq.com
