--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^3.0.1",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-helper-live2d": "^3.0.1",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.2",
-    "live2d-widget-model-hijiki": "^1.0.5"
+    "hexo-server": "^0.2.2"
   }
 }
