--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.2"
+    "hexo-server": "^0.2.2",
+    "hexo-wordcount": "^3.0.2"
   }
 }
