--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -52,7 +52,7 @@ _404_image: '/intro/404-bg.jpg'
 
 # ========== Search ========== #
 algolia_search:
-  enable: false
+  enable: true
   hits:
     per_page: 10
   labels:
