--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -46,7 +46,7 @@ subtitle: All work and no play make Jack a dull boy
 # site haeder image
 site_header_image: '/intro/index-bg.jpg'
 # post haeder image
-post_header_image: '/intro/post-bg.jpg'
+post_header_image: 'https://source.unsplash.com/random'
 # 404 image
 _404_image: '/intro/404-bg.jpg'
 
