--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,8 @@ theme: archer
 deploy:
   type: git
   repo: https://github.com/czorange123/czorange123.github.io.git
+  # repo: git@47.99.216.45:/home/git/blog.git
+  # branch: master
 
   #archer =>tags
   jsonContent:
