--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -42,7 +42,7 @@ SEO_title: Oranges
 # main title
 main_title: Oranges.
 # subtitle
-subtitle: Rather be lonely all my life than go with the tide.
+subtitle: Do What You Do.
 # site haeder image
 site_header_image: '/intro/index-bg.jpg'
 # post haeder image
