--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.7.1",
+    "hexo-admin": "^2.3.0",
     "hexo-algolia": "^1.2.5",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
