add lxwu friend

--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -31,7 +31,7 @@ social:
 friends:
   yuang: //yuang.site/
   dusen: //meditator.cc
-  friendC: 
+  lxwu: //lxwu.me
 about:
   enable: true
   image: '/intro/about-bg.jpg'
