--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -45,8 +45,8 @@ main_title: Oranges.
 subtitle: Do What You Do.
 # site haeder image
 site_header_image: '/intro/index-bg.jpg'
-# post haeder image
-post_header_image: 'https://source.unsplash.com/random'
+# post haeder image https://source.unsplash.com/random
+post_header_image: '/intro/post-bg.jpg'
 # 404 image
 _404_image: '/intro/404-bg.jpg'
 
