--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Orange
+title: Oranges
 subtitle: be yourself
 description: Welcome
-author: orange
+author: oranges
 language: 
 timezone: 
 
