--- a/themes/theme-bmw/_config.yml
+++ b/themes/theme-bmw/_config.yml
@@ -59,7 +59,7 @@ reward:
 # license: 声明信息(支持html)
 copyright:
   enable: false
-  author: Orange's_c
+  author: Oranges
   license: '本博客所有文章除特别声明外，均采用 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> 许可协议。转载请注明出处！'
 
 # 页脚信息
@@ -78,7 +78,7 @@ leancloud:
   timer: true # 是否开启文章统计
 
 # 导航栏头部名称
-nav_name: Orange's_c
+nav_name: Oranges
 
 # 导航栏选项
 # blank: 是否在新页面打开，默认 false
