--- a/themes/theme-bmw/_config.yml
+++ b/themes/theme-bmw/_config.yml
@@ -66,8 +66,8 @@ copyright:
 # start: 建站时间. 格式：YYYY-MM-DD
 # more: 自定义页脚信息(支持HTML)
 footer:
-  start: '2018-02-10'
-  more:
+  start: '2018-11-04'
+  more: Oranges' blog
 
 # 如何开启 评论&统计 插件：https://godbmw.com/passages/2018-11-15-theme-bmw-docs-zh/
 # 请申请自己的 appid 和 appkey，并且替换下面的 appid 和 appkey
@@ -75,7 +75,7 @@ leancloud:
   appid: j73OlR745tdiYMdFRzbTPDrO-gzGzoHsz # 填写您的appid j73OlR745tdiYMdFRzbTPDrO-gzGzoHsz
   appkey: mhyUfuvzMqhq02Fjxk41wc25 # 填写您的appkey
   comment: false # 是否开启评论系统
-  timer: true # 是否开启文章统计
+  timer: false # 是否开启文章统计
 
 # 导航栏头部名称
 nav_name: Oranges
