add gitalk comments

--- a/themes/bmw/_config.yml
+++ b/themes/bmw/_config.yml
@@ -77,6 +77,15 @@ leancloud:
   comment: false # 是否开启评论系统
   timer: false # 是否开启文章统计
 
+gitalk:
+  clientID: 57fd80ca85f9d3276439
+  clientSecret: 7411553827815e5766ebe0bce5e4fb2e36e3217f
+  repo: blog
+  owner: czorange123
+  admin: czorange123
+  distractionFreeMode: false
+  comment: true # 是否开启评论系统
+
 # 导航栏头部名称
 nav_name: Oranges
 
