--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,10 @@ theme: bmw
 deploy:
   type: git
   message: update pages
-  repo: root@47.99.216.45:/var/www/blog.git,master
+  repo: root@47.99.216.45:/var/www/blog.git
+  branch: master
 
+  # 部署github pages
   # repo: https://github.com/czorange123/blog.git
   # branch: gh-pages
 
