--- a/themes/bmw/_config.yml
+++ b/themes/bmw/_config.yml
@@ -81,8 +81,8 @@ gitalk:
   clientID: 57fd80ca85f9d3276439
   clientSecret: 7411553827815e5766ebe0bce5e4fb2e36e3217f
   repo: blog
-  owner: czorange123
-  admin: czorange123
+  owner: zchengsite
+  admin: zchengsite
   distractionFreeMode: false
   enable: true # 是否开启评论系统
 
@@ -121,7 +121,7 @@ nav:
     children:
       -
         name: Github
-        path: "https://github.com/czorange123"
+        path: "https://github.com/zchengsite"
         blank: true
 
 # 友链详细信息：支持多个友链
