--- a/themes/bmw/_config.yml
+++ b/themes/bmw/_config.yml
@@ -67,7 +67,7 @@ copyright:
 # more: 自定义页脚信息(支持HTML)
 footer:
   start: '2017-11-04'
-  more: Oranges' blog
+  more: Orange's blog
 
 # 如何开启 评论&统计 插件：https://godbmw.com/passages/2018-11-15-theme-bmw-docs-zh/
 # 请申请自己的 appid 和 appkey，并且替换下面的 appid 和 appkey
@@ -101,12 +101,12 @@ nav:
   -
     name: 主页
     path: /
-  -
-    name: 归档
-    path: /archives/
-  -
-    name: 分类
-    path: /categories/
+  # -
+  #   name: 归档
+  #   path: /archives/
+  # -
+  #   name: 分类
+  #   path: /categories/
   -
     name: 标签
     path: /tags/
