add mhyu friend

--- a/themes/bmw/_config.yml
+++ b/themes/bmw/_config.yml
@@ -135,6 +135,6 @@ friends:
     site: https://lxwu.me # 站点地址
     meta: # 站点描述
   -
-    nickname: Sdu # 昵称
-    site: https://meditator.cc # 站点地址
-    meta: # 站点描述
+    nickname: Mhyu
+    site: https://mhyu.top
+    meta:
