--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://zcheng.site/
-root: /
+root: /zchengsite.github.io
 permalink: :title.html
 permalink_defaults:
 
