--- a/themes/oranges/_config.yml
+++ b/themes/oranges/_config.yml
@@ -4,6 +4,9 @@ favicon:
   icon: /images/favicon.ico
   touch_icon: /images/favicon.ico
 
+# RSS文件位置
+rss:
+
 # Google Analytics
 gtag:
   enable: false
@@ -34,6 +37,10 @@ navbar:
     name: 归档
     enable: true
     path: /archives/
+  -
+    name: 分类
+    enable: true
+    path: /categories
   -
     name: 标签
     enable: true
