--- a/themes/oranges/_config.yml
+++ b/themes/oranges/_config.yml
@@ -37,10 +37,10 @@ navbar:
     name: 归档
     enable: true
     path: /archives/
-  -
-    name: 分类
-    enable: true
-    path: /categories/
+  # -
+  #   name: 分类
+  #   enable: true
+  #   path: /categories/
   -
     name: 标签
     enable: true
