--- a/themes/oranges/_config.yml
+++ b/themes/oranges/_config.yml
@@ -87,29 +87,32 @@ footer:
     -
       name: github
       icon: github
-      path: https://github.com/zchengsite/hexo-theme-oranges
-    -
-      name: email
-      icon: envelope
-      path: Mailto:ghsau@163.com
-    -
-      name: facebook
-      icon: facebooksquare
-      path:
-    -
-      name: twitter
-      icon: twitter
-      path:
-    -
-      name: 微信
-      icon: wechat
-      path:
-    -
-      name: 微博
-      icon: weibo
-      path:
+      path: https://github.com/zchengsite
+    # -
+    #   name: email
+    #   icon: envelope
+    #   path: Mailto:ghsau@163.com
+    # -
+    #   name: facebook
+    #   icon: facebooksquare
+    #   path:
+    # -
+    #   name: twitter
+    #   icon: twitter
+    #   path:
+    # -
+    #   name: 微信
+    #   icon: wechat
+    #   path:
+    # -
+    #   name: 微博
+    #   icon: weibo
+    #   path:
 
   more:
     -
-      name: Theme - oranges | Orange's blog
+      name: theme by Oranges
       path: https://github.com/zchengsite/hexo-theme-oranges
+    -
+      name: 鄂ICP备18028045号
+      path: http://www.beian.miit.gov.cn
