--- a/themes/oranges/_config.yml
+++ b/themes/oranges/_config.yml
@@ -68,7 +68,7 @@ friends:
     site: https://lxwu.me/
     meta:
   -
-    nikename: Mhyu
+    nickname: Mhyu
     site: https://mhyu.top/
     meta:
 
