--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "hexo": {
-    "version": "4.2.0"
+    "version": "3.9.0"
   },
   "dependencies": {
     "hexo": "^4.2.0",
@@ -12,6 +12,7 @@
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-json-content": "^4.2.3",
     "hexo-generator-tag": "^1.0.0",
