--- a/themes/oranges/_config.yml
+++ b/themes/oranges/_config.yml
@@ -11,7 +11,7 @@
   # friends: 友链
   # footer: 页脚信息
 
-# enable: 是否开启相应功能，可选true & false
+# enable: 是否开启相应功能，可选true || false
 
 # 网站图标
 favicon:
@@ -19,23 +19,26 @@ favicon:
   icon: /images/favicon.ico
   touch_icon: /images/favicon.ico
 
-# 主题用户头像与昵称
+# 用户头像与昵称
 avatar:
   author_photo: /images/34339465.jpg
   author_nickname: Oranges
 
 # Google 分析
 # https://analytics.google.com
-# 获取跟踪 ID
+# 注册Google分析账号，在管理/创建媒体资源/选择网站/填写相关信息后得到跟踪Id，一般格式为UA-xxxxxxx-x
+# 如之前已有注册账号，在管理/跟踪信息/跟踪代码/找到跟踪ID，一般格式为UA-xxxxxxx-x
 gtag:
-  enable: true
+  enable: false
   gtagkey: UA-126364107-1
 
 # 文章评论系统
 comments:
   enable: true
-  # 目前支持gitalk与disqus评论，选择喜欢的一种开启即可
+  # 目前仅支持gitalk, valine, disqus评论，选择喜欢的一种开启即可
+
   gitalk:
+    # https://github.com/gitalk/gitalk#usage查看官方教程
     enable: false
     clientID: 57fd80ca85f9d3276439
     clientSecret: 7411553827815e5766ebe0bce5e4fb2e36e3217f
@@ -46,15 +49,20 @@ comments:
     distractionFreeMode: false
 
   valine:
+    # https://valine.js.org/quickstart.html#%E8%8E%B7%E5%8F%96APP-ID-%E5%92%8C-APP-Key
+    # 进入以上网址查看官方教程
     enable: true
     appId: j73OlR745tdiYMdFRzbTPDrO-gzGzoHsz
     appKey: mhyUfuvzMqhq02Fjxk41wc25
+    placeholder: Welcome!
+    avatar: retro
+    vempty_display: false
 
   # disqus 需科学上网方可使用
   disqus:
     # https://disqus.com/
     # 注册账号，获取shortname.disqus.com，shortname为你定义的唯一name
-    # 举个例子：我注册配置完毕后的网址为zcheng.disqus.com，将zcheng填入即可
+    # 例：我注册配置完毕后的网址为zxcxxxx.disqus.com，zxcxxxx即为shortname
     enable: false
     shortname: zcheng
 
@@ -68,6 +76,10 @@ navbar:
     name: 归档
     enable: true
     path: /archives/
+  # -
+  #   name: 分类
+  #   enable: true
+  #   path: /categories/
   -
     name: 标签
     enable: true
@@ -85,7 +97,7 @@ navbar:
 catalog:
   enable: true
 
-# 友链
+# 友链详细信息：支持多个友链
 friends:
   # nickname: 昵称
   # site: 地址
