--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
-  "name": "zcheng's blog",
-  "version": "2.0.0",
-  "description": "a hexo blog system",
-  "author": "zcheng <1451426471@qq.com>",
-  "license": "MIT",
-  "private": true,
+  "name": "blog",
+  "version": "1.0.0",
+  "description": "Orange's blog",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zchengsite/blog.git"
+  },
+  "keywords": [
+    "hexo"
+  ],
+  "author": "zchengsite",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zchengsite/blog/issues"
+  },
+  "homepage": "https://github.com/zchengsite/blog#readme",
   "hexo": {
     "version": "4.2.1"
   },
@@ -22,6 +36,7 @@
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-jade": "^0.5.0",
     "hexo-renderer-marked": "^2.0.0",
+    "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-wordcount": "^6.0.1"
