--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-util": "^2.1.0",
+    "hexo-wordcount": "^6.0.1",
+    "save-dev": "0.0.1-security"
   }
 }
