--- a/themes/oranges/_config.yml
+++ b/themes/oranges/_config.yml
@@ -22,7 +22,7 @@ favicon:
 
 # 用户头像与昵称
 avatar:
-  author_photo: /images/34339465.jpg
+  author_photo: /images/oranges.png
   author_nickname: Oranges
 
 # Google 分析
