--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hexo-admin": "^2.3.0",
     "hexo-algolia": "^1.3.1",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-fs": "^3.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^2.2.0",
