--- a/themes/oranges/_config.yml
+++ b/themes/oranges/_config.yml
@@ -11,6 +11,7 @@
   # prevnext: 文章末尾的上一页与下一页
   # friends: 友链
   # footer: 页脚信息
+  # search: 文章搜索
 
 # enable: 是否开启相应功能，可选true || false
 
@@ -147,3 +148,8 @@ footer:
     -
       name: 鄂ICP备18028045号
       path: http://www.beian.miit.gov.cn
+
+# 文章搜索
+search:
+  enable: true
+  placeholder: 
