--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,10 @@ skip_render: ['baidu_verify_0ek0txJtPi.html', 'google5273b2adcd968402.html', 'si
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true # Open external links in new tab
+  field: site # Apply to the whole site
+  exclude: ''
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
